# pentos-slicer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  app.py  app_state.py  gcode_tools.py  integrations.py  machine.py  main.py  pentos_config.ini  plane_manager.py  plane_placer.py  pyproject.toml  slice_tools.py  theming.py  viz.py
.github/actions/: test.yml
.github/workflows/: test.yml
gcode_tools/: __init__.py  commands.py  merge.py  moves.py  transitions.py  trimming.py
models/: Tube.pentos  Tube.stl  Y-Shape 2.pentos  Y-Shape 2.stl  Y-Shape-1.3mf  Y-Shape-1.pentos  t_shape.3mf  t_shape.stl
tests/: test_gcode_tools.py  test_machine.py  test_slice_tools.py
views/: __init__.py  preview_view.py  protocols.py  setup_view.py
