[project]
name = "slicer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rtree>=1.4.1",
    "shapely>=2.1.2",
    "triangle>=20250106",
    "trimesh[recommend]>=4.12.2",
    "viser>=1.0.30",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.4.2",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
pythonpath = ["."]
